SAKIII-3024 fix footer logo cutoff in IE8, reduce padding on debug info text to align to text above when opened

--- a/devwidgets/footer/css/footer.css
+++ b/devwidgets/footer/css/footer.css
@@ -21,7 +21,7 @@
 .footer_main.footer_index{width:955px;}
 #footer_logo{background:url(/devwidgets/footer/images/footer_logo.png) no-repeat scroll 0 0 transparent;width:43px;height:28px;float:left;margin-right:15px;}
 #footer_logo_button{float:left;margin-left:-2px;padding-left:2px;}
-.footer_main #footer_debug_info{margin:5px 0 0 64px;}
+.footer_main #footer_debug_info{margin:5px 0 0 0;}
 .footer_main .footer_clickable{cursor:pointer;}
 #footer_contactinfo p{float:right;margin-top:-12px;}
 #footer_divider {font-weight:bold;}
